--- a/index.html
+++ b/index.html
@@ -3,3 +3,13 @@
 
 <h1>B and B+ Tree Interactive Demo</h1>
 <div id="board"></div>
+<div id="buttons">
+<input type="text" name="insert-data" size="3" maxlength="3"/>
+<button type="button">Insert</button>
+&nbsp &nbsp &nbsp
+<input type="text" name="delete-data" size="3" maxlength="3"/>
+<button type="button">Delete</button>
+&nbsp &nbsp &nbsp
+<input type="text" name="search-data" size="3" maxlength="3"/>
+<button type="button">Search</button>
+</div>
