Block out the basic canvas

--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 <h1>B and B+ Tree Interactive Demo</h1>
-<div id="board"></div>
-<div id="buttons">
-<input type="text" name="insert-data" size="3" maxlength="3"/>
-<button type="button">Insert</button>
-&nbsp &nbsp &nbsp
-<input type="text" name="delete-data" size="3" maxlength="3"/>
-<button type="button">Delete</button>
-&nbsp &nbsp &nbsp
-<input type="text" name="search-data" size="3" maxlength="3"/>
-<button type="button">Search</button>
+<div id="content">
+  <div id="board"></div>
+  <br/>
+  <div id="buttons">
+    <input type="text" name="insert-data" size="3" maxlength="3"/>
+    <button type="button">Insert</button>
+    &nbsp &nbsp &nbsp
+    <input type="text" name="delete-data" size="3" maxlength="3"/>
+    <button type="button">Delete</button>
+    &nbsp &nbsp &nbsp
+    <input type="text" name="search-data" size="3" maxlength="3"/>
+    <button type="button">Search</button>
+  </div>
 </div>
+
+<script src="jquery-1.7.2.min.js"></script>
+<script src="kinetic-v3.9.1.min.js"></script>
+<script src="graph.js"></script>
