Add js hooks for buttons

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <br/>
   <div id="buttons">
     <input type="text" name="insert-data" size="3" maxlength="3"/>
-    <button type="button">Insert</button>
+    <button type="button" onclick="insertData();">Insert</button>
     &nbsp &nbsp &nbsp
     <input type="text" name="delete-data" size="3" maxlength="3"/>
-    <button type="button">Delete</button>
+    <button type="button" onclick="deleteData();">Delete</button>
     &nbsp &nbsp &nbsp
     <input type="text" name="search-data" size="3" maxlength="3"/>
-    <button type="button">Search</button>
+    <button type="button" onclick="searchData();">Search</button>
   </div>
 </div>
 
