Make our code actually load

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="style.css" />
 
+<script src="jquery-1.7.2.min.js"></script>
+<script src="kinetic-v3.9.1.min.js"></script>
+<script src="graph.js"></script>
+<script src="main.js"></script>
+<script src="tree.js"></script>
+
 <h1>B and B+ Tree Interactive Demo</h1>
 <div id="content">
   <div id="board"></div>
@@ -17,6 +23,4 @@
   </div>
 </div>
 
-<script src="jquery-1.7.2.min.js"></script>
-<script src="kinetic-v3.9.1.min.js"></script>
-<script src="graph.js"></script>
+
