Some more small fixes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <script src="jquery-1.7.2.min.js"></script>
 <script src="kinetic-v3.9.1.min.js"></script>
 <script src="graph.js"></script>
+<script src="trees.js"></script>
 <script src="main.js"></script>
-<script src="tree.js"></script>
+
 
 <h1>B and B+ Tree Interactive Demo</h1>
 <div id="content">
