Added loader image for long running updates

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
   <div id="board"></div>
   <br/>
   <div id="buttons">
+    <img id="insertLoader" class="imgLoader" src="images/loading.gif" />
     <input type="text" name="insert-data" size="3" maxlength="3"/>
     <button type="button" onclick="insertData();">Insert</button>
-    &nbsp &nbsp &nbsp
+
+    <img id="delteLoader" class="imgLoader" src="images/loading.gif" />
     <input type="text" name="delete-data" size="3" maxlength="3"/>
     <button type="button" onclick="deleteData();">Delete</button>
-    &nbsp &nbsp &nbsp
+
+    <img id="searchLoader" class="imgLoader" src="images/loading.gif" />
     <input type="text" name="search-data" size="3" maxlength="3"/>
     <button type="button" onclick="searchData();">Search</button>
   </div>
