Inserts and deletes and searches all seem to work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="text" name="insert-data" size="3" maxlength="3"/>
     <button type="button" onclick="insertData();">Insert</button>
 
-    <img id="delteLoader" class="imgLoader" src="images/loading.gif" />
+    <img id="deleteLoader" class="imgLoader" src="images/loading.gif" />
     <input type="text" name="delete-data" size="3" maxlength="3"/>
     <button type="button" onclick="deleteData();">Delete</button>
 
