Attempt to add selector menu and adjusted the node reuplsion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <div id="board"></div>
   <br/>
   <div id="buttons">
+    <select id="treeSelector">
+      <option id="btree">B Tree</option>
+      <option id="bptree">B+ Tree</option>
+    </select>
+
     <img id="insertLoader" class="imgLoader" src="images/loading.gif" />
     <input type="text" name="insert-data" size="3" maxlength="3"/>
     <button type="button" onclick="insertData();">Insert</button>
