Added random insert

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <img id="searchLoader" class="imgLoader" src="images/loading.gif" />
     <input type="text" name="search-data" size="3" maxlength="3"/>
     <button type="button" onclick="searchData();">Search</button>
+    
+    <button type="button" onclick="insertRandom();">Insert 5 Random</button>
   </div>
 </div>
 
